add link code to html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
 <div class="container" >
+    <div class="weather-app">
 <h1>
     Kherson
 </h1>
@@ -43,8 +44,9 @@
         </ul>
     </div>
 </div>
+</div>
 <small>
-  <a href="http://"></a>  Open-source code, by Kate Barinova
+  <a href="https://github.com/BarinovaKate/Weather_7_week" target="_blank">Open-source code</a>, by Kate Barinova
 </small>
 </div>
 
