--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 <link rel="stylesheet" href="style.css">
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 
 <body>
@@ -16,14 +17,14 @@
     <div class="weather-app-wrapper">
         <div class="weather-app">
             <div class="overview">
-<h1>
+<h1 id="city">
     Kherson
 </h1>
 <ul>
-    <li>
-      Sunday 12:10  
+    <li>Last updated <span id="date"></span> 
+    </li>   
     </li>
-    <li>
+    <li id="description">
         Sunny
     </li>
 </ul>
@@ -32,21 +33,19 @@
     <div class="col-6">
         <div class="clearfix weather-temperature">
         <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="sunny" class="float-left">
-    <div class="float-left"> <strong>25</strong> 
-        <span class="units"> <a href="#">°C</a>|<a href="#">°F</a></span> 
+    <div class="float-left"> <strong id="temperature">25</strong> 
+        <span class="units"> <a href="#">°C</a>|<a href="#">°F</a>
+        </span> 
     </div> 
     </div>
     </div>
     <div class="col-6">
         <ul>
             <li>
-                Precepitation: 0%
+                Humidity: <span id="humidity">10</span>%
             </li>
             <li>
-                Humidity: 10%
-            </li>
-            <li>
-                Wind: 3km/h
+                Wind: <span id="wind">3</span> km/H
             </li>
         </ul>
     </div>
