--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <div class="row">
     <div class="col-6">
         <div class="clearfix weather-temperature">
-        <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="sunny" class="float-left">
+        <img src=".." alt="sunny" id="icon" class="float-left">
     <div class="float-left"> <strong id="temperature">25</strong> 
         <span class="units"> <a href="#">°C</a>|<a href="#">°F</a>
         </span> 
