--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
 <div class="container" >
     <div class="weather-app-wrapper">
         <div class="weather-app">
+            <form id="search-form" class="mb-3">
+                <div class="row">
+                <div class="col-9">
+                <input id="city-input" type="search" placeholder="Type a city.." class="form-control" autocomplete="off" >
+                </div>
+                <div class="col-3">
+                <input type="submit" value="Search" class="btn btn-primary w-100">
+            </div>
+            </div>
+            </form>
             <div class="overview">
 <h1 id="city">
     Kherson
@@ -30,7 +40,7 @@
 </ul>
 </div>
 <div class="row">
-    <div class="col-6">
+    <div class="col-8">
         <div class="clearfix weather-temperature">
         <img src=".." alt="sunny" id="icon" class="float-left">
     <div class="float-left"> <strong id="temperature">25</strong> 
@@ -39,7 +49,7 @@
     </div> 
     </div>
     </div>
-    <div class="col-6">
+    <div class="col-4">
         <ul>
             <li>
                 Humidity: <span id="humidity">10</span>%
