--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="clearfix weather-temperature">
         <img src=".." alt="sunny" id="icon" class="float-left">
     <div class="float-left"> <strong id="temperature">25</strong> 
-        <span class="units"> <a href="#">°C</a>|<a href="#">°F</a>
+        <span class="units"> <a href="#" id="celsius-link" class="active">°C</a>|<a href="#" id="fahrenheit-link">°F</a>
         </span> 
     </div> 
     </div>
