--- a/index.html
+++ b/index.html
@@ -18,11 +18,14 @@
         <div class="weather-app">
             <form id="search-form" class="mb-3">
                 <div class="row">
-                <div class="col-9">
+                <div class="col-6">
                 <input id="city-input" type="search" placeholder="Type a city.." class="form-control" autocomplete="off" >
                 </div>
                 <div class="col-3">
                 <input type="submit" value="Search" class="btn btn-primary w-100">
+            </div>
+            <div class="col-3">
+                <input type="submit" value="Current" id="current" class="btn btn-primary w-100">
             </div>
             </div>
             </form>
