--- a/index.html
+++ b/index.html
@@ -46,26 +46,28 @@
     <div class="col-8">
         <div class="clearfix weather-temperature">
         <img src=".." alt="sunny" id="icon" class="float-left">
-    <div class="float-left"> <strong id="temperature">25</strong> 
+    <strong id="temperature">25</strong> 
         <span class="units"> <a href="#" id="celsius-link" class="active">°C</a>|<a href="#" id="fahrenheit-link">°F</a>
         </span> 
-    </div> 
+    
     </div>
     </div>
     <div class="col-4">
         <ul>
-            <li>
+            <li class="weather-right">
                 Humidity: <span id="humidity">10</span>%
             </li>
-            <li>
+            <li class="weather-right">
                 Wind: <span id="wind">3</span> km/H
             </li>
         </ul>
     </div>
     
 </div>
-
+<div class="weather-forecast" id="forecast"> 
 </div>
+    </div>
+    </div>
 <small>
   <a href="https://github.com/BarinovaKate/Weather_7_week" target="_blank">Open-source code</a>, by Kate Barinova
 </small>
